--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -18,7 +18,8 @@
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
         "redux-actions": "^2.6.5",
-        "redux-logger": "^3.0.6"
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
