--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "classnames": "^2.2.6",
         "connected-react-router": "^6.7.0",
         "history": "^4.10.1",
         "react": "^16.12.0",
