--- a/Roman_Balashov/react_project/package.json
+++ b/Roman_Balashov/react_project/package.json
@@ -36,6 +36,7 @@
     "connected-react-router": "^6.7.0",
     "eslint": "^6.8.0",
     "history": "^4.10.1",
+    "normalizr": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
