--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -20,7 +20,8 @@
         "redux": "^4.0.5",
         "redux-actions": "^2.6.5",
         "redux-logger": "^3.0.6",
-        "redux-persist": "^6.0.0"
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
