--- a/Vladislav Ovinkin/package.json
+++ b/Vladislav Ovinkin/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.1.2",
     "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
