--- a/Vladislav Ovinkin/package.json
+++ b/Vladislav Ovinkin/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "dev": "webpack-dev-server --mode=development"
+    "dev": "webpack-dev-server --mode=development",
+    "lint": "eslint src/**/**.js src/**/**.jsx",
+    "lint:fix": "eslint src/**/**.js src/**/**.jsx --fix"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +28,8 @@
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.1.2",
