--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -10,6 +10,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@babel/runtime": "^7.8.4",
+        "babel-preset-es2017": "^6.24.1",
         "classnames": "^2.2.6",
         "connected-react-router": "^6.7.0",
         "history": "^4.10.1",
@@ -21,17 +23,24 @@
         "redux-actions": "^2.6.5",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "regenerator-runtime": "^0.13.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.8.4",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.8.3",
         "@babel/preset-env": "^7.8.4",
         "@babel/preset-react": "^7.8.3",
         "@material-ui/core": "^4.9.1",
         "@material-ui/icons": "^4.9.1",
+        "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "css-loader": "^3.4.2",
         "eslint": "^6.8.0",
         "eslint-config-standard": "^14.1.0",
