--- a/Alexey_Bobkov/package.json
+++ b/Alexey_Bobkov/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@babel/runtime": "^7.8.4",
+        "@reduxjs/toolkit": "^1.2.5",
         "babel-preset-es2017": "^6.24.1",
         "classnames": "^2.2.6",
         "connected-react-router": "^6.7.0",
