--- a/Roman_Balashov/react_project/package.json
+++ b/Roman_Balashov/react_project/package.json
@@ -4,7 +4,7 @@
   "description": "react.js study project",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode=production",
     "dev": "webpack-dev-server --mode=development --open",
     "lint": "eslint src/**/**.js src/**/**.jsx",
@@ -20,12 +20,19 @@
     "@babel/preset-react": "^7.8.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.40",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-plugin-react": "^7.18.3",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
+    "jest-cli": "^25.1.0",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.12.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
