--- a/Alexey_Bobkov/manifest/manifest.json
+++ b/Alexey_Bobkov/manifest/manifest.json
@@ -47,5 +47,6 @@
     "background_color": "#7ACCE5",
     "theme_color": "#7ACCE5",
     "orientation": "any",
-    "display": "standalone"
+    "display": "standalone",
+    "gcm_sender_id": "1234567890"
 }
